2001-04-01  Jeff Freedman  <jeff@amy.nerble.net>

	* Rendering-order changes.

2001-03-31  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Bug fixes for fighting on List Field.

2001-03-30  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* data/bg/fellowshipstaff.shp: my attempt at a fellowship staff
	* data/bg/flx.in, gump/Paperdoll_gump_info.cc, Makefile.*: added art
	* docs/art.txt: list of needed/done art for paperdolls

2001-03-30  Tristan Tarrant <nadir@users.sourceforge.net>

	* data/quotes.txt: New quote from Jeff

2001-03-30  Jeff Freedman  <jeff@amy.nerble.net>

	* actors.cc: Added 'dead' flag, 'killable' flag.  SI combat is
	still really buggy, but perhaps more on the right track.

2001-03-29  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* keys.h: fixed 'double help' when using custom keybindings

2001-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Lots of usecode intrinsics added/verified/commented.

2001-03-28  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/expack.cc, files/utils.*: fixed expack switch_slashes problem
	* gumps/Paperdoll_gump_info.cc: corrected cloak shape numbers

2001-03-28  Jeff Freedman  <jeff@amy.nerble.net>

	* Removed more 'paint()' calls in Usecode intrinsics to fix
	problem with disappearing faces in conversations.
	* In the File gump, the RETURN key does a 'save' if the action is
	unambiguous.

2001-03-27  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* tools/Makefile.am: added SDL_INCLUDES to includes
	* schedule.cc: fixed crash in Sew_schedule

2001-03-26  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* Makefile.be: added exult_bg.flx to dependencies
	* gumps/Spellbook_gump.cc: fixed crash when enabling wizardmode when spellbook open

2001-03-26  Jeff Freedman  <jeff@amy.nerble.net>

	* SI - Crystal-ball space scene starting to work, except sometimes
	you can see the cat(!).
	* The Cantra-vs-Batlin scene in the crystal ball is also
	appearing, except (1) usually Batlin is being chased by Cantra,